[gd_scene load_steps=6 format=2]

[ext_resource path="res://World/Door.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Level.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Level_05.gd" type="Script" id=3]
[ext_resource path="res://World/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Target.tscn" type="PackedScene" id=5]

[node name="Level_05" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="TileMap" parent="." index="0"]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 65536, 0, 0, 65543, 0, 0, 65544, 0, 0, 65552, 0, 0, 65553, 0, 0, 65558, 0, 0, 131072, 0, 0, 131079, 0, 0, 131080, 0, 0, 131088, 0, 0, 131089, 0, 0, 131094, 0, 0, 196608, 0, 0, 196615, 0, 0, 196616, 0, 0, 196624, 0, 0, 196625, 0, 0, 196630, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262151, 0, 0, 262152, 0, 0, 262160, 0, 0, 262161, 0, 0, 262166, 0, 0, 327680, 0, 0, 327687, 0, 0, 327688, 0, 0, 327696, 0, 0, 327697, 0, 0, 327702, 0, 0, 393216, 0, 0, 393223, 0, 0, 393224, 0, 0, 393232, 0, 0, 393233, 0, 0, 393238, 0, 0, 458752, 0, 0, 458774, 0, 0, 524288, 0, 0, 524310, 0, 0, 589824, 0, 0, 589846, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0 )

[node name="SpawnPoint" parent="." index="1"]
position = Vector2( 32, 40 )

[node name="LevelPortal" parent="." index="2"]
position = Vector2( 334, 159 )

[node name="Door" parent="." index="3" instance=ExtResource( 1 )]
position = Vector2( 128, 152 )

[node name="Door2" parent="." index="4" instance=ExtResource( 1 )]
position = Vector2( 272, 152 )

[node name="Target" parent="." index="5" instance=ExtResource( 5 )]
position = Vector2( 239, 34 )

[node name="Target2" parent="." index="6" instance=ExtResource( 5 )]
position = Vector2( 201, 56 )

[node name="Target3" parent="." index="7" instance=ExtResource( 5 )]
position = Vector2( 161, 32 )

[node name="Button" parent="." index="8" instance=ExtResource( 4 )]
position = Vector2( 88, 160 )
